--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "counter",
   "version": "1.0.0",
   "description": "awesome react counter",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "build": "webpack",
     "start": "webpack serve",
@@ -23,24 +23,24 @@
   },
   "homepage": "https://github.com/AlexeyAbretov/counter#readme",
   "dependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
-    "@babel/core": "7.20.5",
-    "@babel/preset-env": "7.20.2",
-    "@babel/preset-react": "7.18.6",
-    "babel-loader": "9.1.0",
-    "html-webpack-plugin": "5.5.0",
-    "style-loader": "2.0.0",
-    "css-loader": "5.2.6",
-    "@storybook/react": "6.3.7",
+    "@storybook/addon-actions": "6.3.7",
+    "@storybook/addon-essentials": "6.3.7",
     "@storybook/builder-webpack5": "6.3.7",
     "@storybook/manager-webpack5": "6.3.7",
-    "@storybook/addon-actions": "6.3.7",
-    "@storybook/addon-essentials": "6.3.7"
+    "@storybook/react": "6.3.7",
+    "css-loader": "5.2.6",
+    "html-webpack-plugin": "5.5.0",
+    "style-loader": "2.0.0",
+    "ts-loader": "^9.4.2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
