--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
   },
   "homepage": "https://github.com/AlexeyAbretov/counter#readme",
   "dependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.9.4",
-    "redux": "4.2.0",
-    "react-redux": "8.0.5",
-    "@types/redux": "3.6.0",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
     "@types/react-redux": "7.1.25",
+    "@types/redux": "3.6.0",
+    "@types/styled-components": "5.1.26",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "8.0.5",
+    "redux": "4.2.0",
     "styled-components": "5.3.6",
-    "@types/styled-components": "5.1.26"
+    "styled-system": "5.1.5",
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@storybook/addon-actions": "6.3.7",
@@ -43,13 +44,14 @@
     "@storybook/builder-webpack5": "6.3.7",
     "@storybook/manager-webpack5": "6.3.7",
     "@storybook/react": "6.3.7",
-    "html-webpack-plugin": "5.5.0",
-    "ts-loader": "^9.4.2",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
+    "@types/styled-system": "5.1.16",
     "cross-env": "7.0.3",
     "dotenv": "8.2.0",
-    "typescript-plugin-styled-components": "2.0.0"
+    "html-webpack-plugin": "5.5.0",
+    "ts-loader": "9.4.2",
+    "typescript-plugin-styled-components": "2.0.0",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.11.1"
   }
 }
