--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,6 +53,8 @@
     "rules": {
         "no-shadow": "off",
         "no-unused-vars": "off",
+        "react/prop-types": "off",
+        "react/require-default-props": "off",
         "@typescript-eslint/no-shadow": ["error"],
         "@typescript-eslint/no-unused-vars": "error",
         "react/function-component-definition": "off",
