--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
         },
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
     },
     "include": [
         "src/**/*.ts", 
