--- a/package.json
+++ b/package.json
@@ -30,16 +30,13 @@
   },
   "homepage": "https://github.com/AlexeyAbretov/counter#readme",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.2",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
-    "@types/react-redux": "7.1.25",
-    "@types/redux": "3.6.0",
     "@types/styled-components": "5.1.26",
+    "mobx": "^6.8.0",
+    "mobx-react-lite": "^3.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "8.0.5",
-    "redux": "4.2.0",
     "styled-components": "5.3.6",
     "typescript": "^4.9.4"
   },
@@ -66,6 +63,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "5.5.0",
+    "husky": "7.0.2",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "jest-styled-components": "^7.1.1",
@@ -76,9 +74,6 @@
     "typescript-plugin-styled-components": "2.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "redux-mock-store": "1.5.4",
-    "@types/redux-mock-store": "1.0.3",
-    "husky": "7.0.2",
     "webpack-dev-server": "^4.11.1"
   }
 }
