--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "storybook": "start-storybook -p 6006",
     "eslint": "eslint 'src/**'",
     "eslint:fix": "eslint --fix 'src/**'",
-    "test": "jest",
-    "test:coverage": "jest --collect-coverage",
+    "test": "vitest",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage",
     "postinstall": "husky install",
     "build-storybook": "build-storybook"
   },
@@ -47,14 +48,11 @@
     "@storybook/addon-links": "^6.5.16",
     "@storybook/builder-vite": "^0.4.2",
     "@storybook/react": "^6.5.16",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "12.1.4",
-    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "babel-loader": "^8.3.0",
-    "cross-env": "7.0.3",
+    "@vitest/coverage-c8": "^0.29.7",
     "dotenv": "8.2.0",
     "eslint": "^8.33.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -66,16 +64,10 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "7.0.2",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
-    "jest-styled-components": "^7.1.1",
     "prettier": "2.8.3",
-    "react-is": "^18.2.0",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript-plugin-styled-components": "2.0.0",
     "vite": "^4.2.1",
-    "vite-plugin-html": "^3.2.0"
+    "vite-plugin-html": "^3.2.0",
+    "vitest": "^0.29.7"
   }
 }
